--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,9 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+mysqlconnector://root@localhost/sixsaudit
+
+# sqlalchemy.url = mysql+mysqlconnector://root@localhost/dbname
+sqlalchemy.url = %(CONNECTION_STRING)s
 
 
 [post_write_hooks]
